It finally workey

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
 <div class="container">
-    <div id="input-div" style="position: relative"><label for="widget_lbl"></label><input id="widget_lbl" class="input-lbl"/></div>
+    <div style="position: relative">
+        <div id="input-div" contenteditable="true"></div>
+    </div>
+
 </div>
 <script src="main.js" type="module"></script>
 </body>
